[gd_scene load_steps=8 format=3 uid="uid://fbkdr325o4oi"]

[ext_resource type="Script" uid="uid://cmgimlktu6ckl" path="res://scenes/world_select.gd" id="1_vlbqk"]
[ext_resource type="Texture2D" uid="uid://0x0jja87hmqb" path="res://assets/myassets/worldselect.png" id="2_pglme"]
[ext_resource type="PackedScene" uid="uid://duh377muvgb" path="res://scenes/world_icon.tscn" id="2_ppnh1"]
[ext_resource type="PackedScene" uid="uid://crrgpgtb2xnox" path="res://scenes/player_icon.tscn" id="2_qxscb"]
[ext_resource type="Script" uid="uid://d1uqvvvuq0dcj" path="res://scenes/level_select.gd" id="3_20n3b"]
[ext_resource type="PackedScene" uid="uid://d4nxa8wf053gp" path="res://scenes/level_icon.tscn" id="4_pglme"]

[sub_resource type="PackedScene" id="PackedScene_bpgdl"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("LevelSelect", "Control", "layout_mode", "anchors_preset", "anchor_right", "anchor_bottom", "grow_horizontal", "grow_vertical", "script", "1", "layout_mode", "next_level_right", "2", "layout_mode", "offset_left", "offset_right", "level_name", "next_scene_path", "next_level_left", "next_level_right", "3", "layout_mode", "offset_left", "offset_right", "level_name", "next_level_left", "next_level_right", "4", "layout_mode", "offset_left", "offset_right", "level_name", "next_level_left", "next_level_right", "5", "layout_mode", "offset_left", "offset_right", "level_name", "next_level_left", "PlayerIcon", "layout_mode", "Camera2D", "Camera2D", "position"),
"node_count": 8,
"node_paths": [NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath("."), NodePath(".")],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 7, 2, 0, 3, 1, 4, 2, 5, 3, 6, 4, 7, 5, 8, 6, 0, 1073741824, 0, 2147483647, 9, 7, 2, 10, 8, 1073741835, 9, 0, 1073741825, 0, 2147483647, 12, 10, 7, 13, 11, 14, 12, 15, 13, 16, 14, 17, 15, 1073741842, 16, 1073741843, 17, 0, 1073741826, 0, 2147483647, 20, 18, 6, 21, 19, 22, 20, 23, 21, 24, 22, 1073741849, 23, 1073741850, 24, 0, 1073741827, 0, 2147483647, 27, 25, 6, 28, 26, 29, 27, 30, 28, 31, 29, 1073741856, 30, 1073741857, 31, 0, 1073741828, 0, 2147483647, 34, 32, 5, 35, 33, 36, 34, 37, 35, 38, 36, 1073741863, 37, 0, 1073741829, 0, 2147483647, 40, 38, 1, 41, 39, 0, 1073741830, 0, 43, 42, -1, 1, 44, 40, 0),
"variants": [3, 15, 1.0, 1.0, 2, 2, ExtResource("3_20n3b"), ExtResource("4_pglme"), 1, NodePath("../2"), ExtResource("4_pglme"), 1, 128.0, 128.0, "2", "uid://chj7xbj3lvt2", NodePath("../1"), NodePath("../3"), ExtResource("4_pglme"), 1, 256.0, 256.0, "3", NodePath("../2"), NodePath("../4"), ExtResource("4_pglme"), 1, 384.0, 384.0, "4", NodePath("../3"), NodePath("../5"), ExtResource("4_pglme"), 1, 512.0, 512.0, "5", NodePath("../4"), ExtResource("2_qxscb"), 0, Vector2(400, -40)],
"version": 3
}

[node name="WorldSelect" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 256.0
offset_top = -424.0
offset_right = 320.0
offset_bottom = -360.0
script = ExtResource("1_vlbqk")

[node name="Worldselect" type="Sprite2D" parent="."]
position = Vector2(384, 64)
texture = ExtResource("2_pglme")

[node name="WorldIcon1" parent="." instance=ExtResource("2_ppnh1")]
visible = false
layout_mode = 1
offset_left = -51.0
offset_top = -131.0
offset_right = -51.0
offset_bottom = -131.0

[node name="WorldIcon2" parent="." instance=ExtResource("2_ppnh1")]
visible = false
layout_mode = 1
offset_left = 334.0
offset_top = -29.0
offset_right = 334.0
offset_bottom = -29.0
world_index = 2
level_select_packed = SubResource("PackedScene_bpgdl")

[node name="WorldIcon3" parent="." instance=ExtResource("2_ppnh1")]
visible = false
layout_mode = 1
offset_left = 749.0
offset_top = -134.0
offset_right = 749.0
offset_bottom = -134.0
world_index = 3

[node name="WorldIcon4" parent="." instance=ExtResource("2_ppnh1")]
visible = false
layout_mode = 1
offset_left = 40.0
offset_top = 198.0
offset_right = 40.0
offset_bottom = 198.0
world_index = 4

[node name="WorldIcon5" parent="." instance=ExtResource("2_ppnh1")]
visible = false
layout_mode = 1
offset_left = 643.0
offset_top = 192.0
offset_right = 643.0
offset_bottom = 192.0
world_index = 5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(384, 64)

[node name="PlayerIcon" parent="." instance=ExtResource("2_qxscb")]
layout_mode = 0
offset_left = -51.0
offset_top = -131.0
offset_right = 13.0
offset_bottom = -67.0
